--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-actuator-autoconfigure -->
+		<dependency>
+    			<groupId>org.springframework.boot</groupId>
+    			<artifactId>spring-boot-actuator-autoconfigure</artifactId>
+    			<version>2.5.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
